tests/toylang/neg/000249_mutation.toylang
program a = { bool a : bool; } .
